plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '6.25.0'
}

group = 'org.sku'
version = '0.0.1-SNAPSHOT'
description = 'milzip'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Web
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // DB
    runtimeOnly 'org.postgresql:postgresql'

    // Flyway
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Swagger (SpringDoc OpenAPI)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

    // Mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // MapStruct
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('compileJava') {
    dependsOn 'spotlessApply'
}

tasks.named('test') {
    useJUnitPlatform()
    failOnNoDiscoveredTests = false
}

spotless {
    java {
        // Google Java Style Guide 기준으로 전체 코드 포맷 적용 (들여쓰기 2칸, 중괄호 위치 등)
        googleJavaFormat()
        // import 문을 java → javax → jakarta → org → com 순서로 정렬
        importOrder('java', 'javax', 'jakarta', 'org', 'com')
        // 코드에서 실제로 사용하지 않는 import 자동 제거
        removeUnusedImports()
        // 각 줄 끝에 붙은 불필요한 공백 제거
        trimTrailingWhitespace()
        // 파일 마지막에 빈 줄 하나 보장 (git diff 노이즈 방지)
        endWithNewline()
        // @Override, @Getter 등 어노테이션 위치와 순서를 일관성 있게 정렬
        formatAnnotations()
    }
}
